    + [CL] Skip Objective-C libraries for the no-symbols-control-file tag
      as instance/class methods do not appear in the symbol table. Thanks
      to Yavor Doganov for the report and help.  (Closes: #749202)
  * checks/standards-version.desc:
    + [CL] Downgrade severity of out-of-date-standards-version from normal
      ("W:") to wishlist ("I:").  (Closes: #886210)

  * data/files/fnames:
    + [CL] Warn about packages that ship (non-reproducible) Python
      Hypothesis examples.  (Closes: #886101)

  * reporting/templates/maintainer.tmpl:
    + [CL] Make the previously-hidden package anchor links visible so that
      one can right-click and copy the URL instead of constructing it
      manually.

  * t/tests/files-multiarch-foreign-files:
    + [CL] Ensure that we install to a multiarch directory on all
      architectures to prevent a FTBFS on, for example, i386.
      (Closes: #886163)

 -- Chris Lamb <lamby@debian.org>  Mon, 01 Jan 2018 15:41:06 +0000

lintian (2.5.67) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - debian-rules-should-not-use-DH_EXTRA_ADDONS
      - debian-watch-could-verify-download
      - invalid-date-in-debian-changelog
      - override_dh_fixperms-does-not-call-dh_fixperms

  * checks/apache2.{desc,pm}:
    + [CL] Include the offending filename and line number in the output of
      apache2-deprecated-auth-config and apache2-unparsable-dependency.
    + [CL] Avoid false positives in apache2-deprecated-auth-config where
      the offending lines are wrapped in suitable "IfModule" or "IfVersion"
      directives.  (Closes: #788991, #710656)
  * checks/changelog-file.{desc,pm}:
    + [CL] Warn about changelog entries that have incorrectly formatted
      dates.  (Closes: #793406)
  * checks/files.pm:
    + [CL] Split out python-module-has-overly-generic-name regular
      expression into a data file.
    + [CL] Don't warn about extra license files installed via Sphinx.