@@ -1,4 +1,4 @@
 # gcc and valgring need glibc package
 ^libc\d+-dbg$
 # python module build against python debug
-^python\d+-.*-dbg$
+^python\d*-.*-dbg$
